...
    <string name="profile__color">Color</string>
    <string name="profile__device">Device</string>
    <string name="profile__no_name">No name</string>
    <string name="profile__save">Save</string>
    <string name="profile__no_bluetooth_settings_activity">Unable to open Bluetooth Settings, if you want to rename your device please do it manually</string>

    <string name="chat__not_connected">Not connected</string>
    <string name="chat__connected">Connected</string>
    <string name="chat__pending">Pending</string>
    <string name="chat__reconnect">Reconnect</string>
    <string name="chat__disconnect">Disconnect</string>
    <string name="chat__sending_failed">Unable to send this message, please try again</string>
    <string name="chat__connection_rejected">Your connection request was rejected</string>
    <string name="chat__waiting_for_device">You are waiting for this device to approve a connection</string>
    <string name="chat__connect">Connect</string>
    <string name="chat__not_connected_to_send">You are not connected to this device</string>
    <string name="chat__connection_request"><![CDATA[<b>%1$s (%2$s)</b> wants to connect to you]]></string>
    <string name="chat__not_connected_to_this_device">You are not connected to this device right now</string>
    <string name="chat__message_cannot_be_empty">Message cannot be empty</string>
    <string name="chat__partner_disconnected">Your partner disconnected from your device. Do you want to reconnect?</string>
    <string name="chat__connection_lost">Connection with this device was lost. Do you want to reconnect?</string>
    <string name="chat__bluetooth_is_disabled">Bluetooth is disabled</string>
    <string name="chat__enable">Enable</string>
    <string name="chat__unable_to_connect">Unable to connect to this device, do you want to try again?</string>
    <string name="chat__rescan">Rescan</string>
    <string name="chat__device_is_not_available">This device is not available right now, make sure it\'s paired</string>
...
    <string name="chat__connected_to_another"><![CDATA[You are currently connected to <b>%s</b>. You can connect to this device but current connection will be interrupted]]></string>
    <string name="chat__message_hint">Message</string>
    <string name="chat__chat">Chat</string>
    <string name="chat__too_big_file">This file it too big. Max file size which you can send via Bluetooth Chatter is %s</string>
    <string name="chat__removed_file">Removed file</string>
    <string name="chat__missing_file">Missing file</string>
    <string name="chat__partner_canceled_file_transfer">Your partner has canceled file transfer</string>
    <string name="chat__problem_during_file_transfer">Problem during file transfer</string>
    <string name="chat__file_not_exist">Unable to find this file, please try again</string>
    <string name="chat__sending_image">Sending image</string>
    <string name="chat__sending_file">Sending file</string>
    <string name="chat__receiving_images">Receiving image</string>
    <string name="chat__receiving_file">Receiving file</string>
    <string name="chat__received_files">Received Files</string>
    <string name="chat__partner_unable_to_receive_files">Your partner uses an old version of Bluetooth Chatter which is not able to receive files.</string>
    <string name="chat__partner_unable_to_reply_to_message">Your partner uses an old version of Bluetooth Chatter which is not able to receive replied messages.</string>
    <string name="chat__image_message">%s [Image]</string>
    <string name="chat__image_file">%s [File]</string>
...
