<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_chat_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.activity.ChatActivity">

    <tech.hombre.bluetoothchatter.ui.widget.ActionView
        android:id="@+id/av_actions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/ll_text_sending_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/chat__message_hint"
                android:inputType="textLongMessage|textCapSentences|textMultiLine"
                android:maxLines="4"
                android:padding="8dp"
                android:textSize="16sp" />

            <ViewSwitcher
                android:id="@+id/vs_send_buttons"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:inAnimation="@anim/switcher_scale_in"
                android:outAnimation="@anim/switcher_scale_out">

                <ImageButton
                    android:id="@+id/ib_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/chat__cd__send_image_button"
                    app:srcCompat="@drawable/ic_photo" />

                <ImageButton
                    android:id="@+id/ib_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/chat__cd__send_text_button"
                    app:srcCompat="@drawable/ic_send_black_24dp" />

            </ViewSwitcher>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_image_sending_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_transferring_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:contentDescription="@string/chat__cd__transferring_image"
                android:scaleType="centerInside" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_sending_image_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:text="Sending image" />

                <TextView
                    android:id="@+id/tv_file_sending_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sending_image_label"
                    android:fontFamily="sans-serif-light"
                    tools:text="35%" />

                <TextView
                    android:id="@+id/tv_file_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tv_sending_image_label"
                    android:fontFamily="sans-serif-light"
                    tools:text="100 Mb" />

                <ProgressBar
                    android:id="@+id/pb_transferring_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_file_sending_percentage"
                    tools:max="100"
                    tools:progress="35" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/ib_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="0"
                android:contentDescription="@string/chat__cd__cancel_image_transfer"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_close" />
        </LinearLayout>
    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/av_actions"
        app:layout_constraintVertical_bias="1.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:stackFromEnd="true"
            tools:listitem="@layout/item_message_text_foreign" />

        <tech.hombre.bluetoothchatter.ui.widget.GoDownButton
            android:id="@+id/gdb_go_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="invisible"
            app:layout_anchor="@id/rv_chat"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_presharing_image_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="124dp">

            <ImageView
                android:id="@+id/iv_presharing_image"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/background_image"
                android:contentDescription="@string/chat__cd__preshare_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chat__presharing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_presharing_image"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_retry"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/chat__presharing_share"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/general__cancel"
                android:textColor="@drawable/button_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_retry"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/iv_presharing_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
