...
            android:gravity="center"
            android:padding="8dp"
            android:visibility="gone"
            app:drawableStartCompat="@android:drawable/ic_menu_report_image" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chat__cd__sent_image"
            android:maxWidth="158dp"
            android:scaleType="centerCrop"
...
